option('enable_features', type: 'array', description: 'Enable undocumented configuration features')
option('disable_features', type: 'array', description: 'Disable undocumented configuration features')
option('force_enable_features', type: 'array', description: 'Set these undocumented configuration flags as enabled')
option('force_disable_features', type: 'array', description: 'Set these undocumented configuration flags as disabled')
#### --- GENERATED EXTERN OPTIONS --- ####
option('cpu', type: 'string', value: '', description: 'tune for the specified CPU (ARM: cortex-a8, X86: sse3)')
option('gprof', type: 'boolean', value: false, description: 'enable/disable gprof profiling instrumentation')
option('thumb', type: 'boolean', value: false, description: 'enable/disable building arm assembly in thumb mode')
option('install_docs', type: 'boolean', value: true, description: 'control whether docs are installed')
option('install_bins', type: 'boolean', value: true, description: 'control whether binaries are installed')
option('install_libs', type: 'boolean', value: true, description: 'control whether libraries are installed')
option('install_srcs', type: 'boolean', value: false, description: 'control whether sources are installed')
option('libs', type: 'boolean', value: true, description: 'libraries')
option('examples', type: 'boolean', value: true, description: 'examples')
option('tools', type: 'boolean', value: true, description: 'tools')
option('docs', type: 'boolean', value: true, description: 'documentation')
option('unit_tests', type: 'boolean', value: false, description: 'unit tests')
option('decode_perf_tests', type: 'boolean', value: false, description: 'build decoder perf tests with unit tests')
option('encode_perf_tests', type: 'boolean', value: false, description: 'build encoder perf tests with unit tests')
option('size_limit', type: 'string', value: '', description: 'max size to allow in the decoder')
option('codec_srcs', type: 'boolean', value: false, description: 'in/exclude codec library source code')
option('debug_libs', type: 'boolean', value: false, description: 'in/exclude debug version of libraries')
option('static_msvcrt', type: 'boolean', value: false, description: 'use static MSVCRT (VS builds only)')
option('vp9_highbitdepth', type: 'boolean', value: false, description: 'use VP9 high bit depth (10/12) profiles')
option('better_hw_compatibility', type: 'boolean', value: false, description: 'enable encoder to produce streams with better hardware decoder compatibility')
option('vp8', type: 'boolean', value: true, description: 'Enable the VP8 codec')
option('vp9', type: 'boolean', value: true, description: 'Enable the VP9 codec')
option('internal_stats', type: 'boolean', value: false, description: 'output of encoder internal stats for debug, if supported (encoders)')
option('postproc', type: 'boolean', value: false, description: 'postprocessing')
option('vp9_postproc', type: 'boolean', value: false, description: 'vp9 specific postprocessing')
option('multithread', type: 'boolean', value: true, description: 'multithreaded encoding and decoding')
option('spatial_resampling', type: 'boolean', value: true, description: 'spatial sampling (scaling) support')
option('realtime_only', type: 'boolean', value: false, description: 'enable this option while building for real-time encoding')
option('onthefly_bitpacking', type: 'boolean', value: false, description: 'enable on-the-fly bitpacking in real-time encoding')
option('error_concealment', type: 'boolean', value: false, description: 'enable this option to get a decoder which is able to conceal losses')
option('coefficient_range_checking', type: 'boolean', value: false, description: 'enable decoder to check if intermediate transform coefficients are in valid range')
option('runtime_cpu_detect', type: 'boolean', value: false, description: 'runtime cpu detection')
option('postproc_visualizer', type: 'boolean', value: false, description: 'macro block / block level visualizers')
option('multi_res_encoding', type: 'boolean', value: false, description: 'enable multiple-resolution encoding')
option('temporal_denoising', type: 'boolean', value: true, description: 'enable temporal denoising and disable the spatial denoiser')
option('vp9_temporal_denoising', type: 'boolean', value: false, description: 'enable vp9 temporal denoising')
option('webm_io', type: 'boolean', value: false, description: 'enable input from and output to WebM container')
option('libyuv', type: 'boolean', value: false, description: 'enable libyuv')
option('vp8_decoder', type: 'boolean', value: true, description: 'Enable the VP8 decoder only')
option('vp9_decoder', type: 'boolean', value: true, description: 'Enable the VP9 decoder only')
#### --- END GENERATED EXTERN OPTIONS --- ####
