option('enable_features', type: 'array', description: 'Enable  these (possibly undocumented) configuration entries')
option('disable_features', type: 'array', description: 'Disable these (possibly undocumented) configuration entries')
option('force_enable_features', type: 'array', description: 'Forcibly set these (possibly undocumented) configuration entries as enabled')
option('force_disable_features', type: 'array', description: 'Forcibly set these (possibly undocumented) configuration entries as disabled')
#### --- GENERATED EXTERN OPTIONS --- ####
option('cpu', type: 'string', description: 'tune for the specified CPU (ARM: cortex-a8, X86: sse3)')
option('gprof', type: 'combo', choices: ['unset', 'true', 'false'], description: 'enable/disable gprof profiling instrumentation')
option('thumb', type: 'combo', choices: ['unset', 'true', 'false'], description: 'enable/disable building arm assembly in thumb mode')
option('install_docs', type: 'combo', choices: ['unset', 'true', 'false'], value: 'true', description: 'control whether docs are installed')
option('install_bins', type: 'combo', choices: ['unset', 'true', 'false'], value: 'true', description: 'control whether binaries are installed')
option('install_libs', type: 'combo', choices: ['unset', 'true', 'false'], value: 'true', description: 'control whether libraries are installed')
option('install_srcs', type: 'combo', choices: ['unset', 'true', 'false'], description: 'control whether sources are installed')
option('libs', type: 'combo', choices: ['unset', 'true', 'false'], value: 'true', description: 'libraries')
option('examples', type: 'combo', choices: ['unset', 'true', 'false'], value: 'true', description: 'examples')
option('tools', type: 'combo', choices: ['unset', 'true', 'false'], value: 'true', description: 'tools')
option('docs', type: 'combo', choices: ['unset', 'true', 'false'], value: 'true', description: 'documentation')
option('unit_tests', type: 'combo', choices: ['unset', 'true', 'false'], description: 'unit tests')
option('decode_perf_tests', type: 'combo', choices: ['unset', 'true', 'false'], description: 'build decoder perf tests with unit tests')
option('encode_perf_tests', type: 'combo', choices: ['unset', 'true', 'false'], description: 'build encoder perf tests with unit tests')
option('size_limit', type: 'string', description: 'max size to allow in the decoder')
option('codec_srcs', type: 'combo', choices: ['unset', 'true', 'false'], description: 'in/exclude codec library source code')
option('vp9_highbitdepth', type: 'combo', choices: ['unset', 'true', 'false'], description: 'use VP9 high bit depth (10/12) profiles')
option('better_hw_compatibility', type: 'combo', choices: ['unset', 'true', 'false'], description: 'enable encoder to produce streams with better hardware decoder compatibility')
option('vp8', type: 'combo', choices: ['unset', 'true', 'false'], description: 'Enable the VP8 codec')
option('vp9', type: 'combo', choices: ['unset', 'true', 'false'], description: 'Enable the VP9 codec')
option('internal_stats', type: 'combo', choices: ['unset', 'true', 'false'], description: 'output of encoder internal stats for debug, if supported (encoders)')
option('postproc', type: 'combo', choices: ['unset', 'true', 'false'], description: 'postprocessing')
option('vp9_postproc', type: 'combo', choices: ['unset', 'true', 'false'], description: 'vp9 specific postprocessing')
option('multithread', type: 'combo', choices: ['unset', 'true', 'false'], value: 'true', description: 'multithreaded encoding and decoding')
option('spatial_resampling', type: 'combo', choices: ['unset', 'true', 'false'], value: 'true', description: 'spatial sampling (scaling) support')
option('realtime_only', type: 'combo', choices: ['unset', 'true', 'false'], description: 'enable this option while building for real-time encoding')
option('onthefly_bitpacking', type: 'combo', choices: ['unset', 'true', 'false'], description: 'enable on-the-fly bitpacking in real-time encoding')
option('error_concealment', type: 'combo', choices: ['unset', 'true', 'false'], description: 'enable this option to get a decoder which is able to conceal losses')
option('coefficient_range_checking', type: 'combo', choices: ['unset', 'true', 'false'], description: 'enable decoder to check if intermediate transform coefficients are in valid range')
option('runtime_cpu_detect', type: 'combo', choices: ['unset', 'true', 'false'], description: 'runtime cpu detection')
option('postproc_visualizer', type: 'combo', choices: ['unset', 'true', 'false'], description: 'macro block / block level visualizers')
option('multi_res_encoding', type: 'combo', choices: ['unset', 'true', 'false'], description: 'enable multiple-resolution encoding')
option('temporal_denoising', type: 'combo', choices: ['unset', 'true', 'false'], value: 'true', description: 'enable temporal denoising and disable the spatial denoiser')
option('vp9_temporal_denoising', type: 'combo', choices: ['unset', 'true', 'false'], description: 'enable vp9 temporal denoising')
option('webm_io', type: 'combo', choices: ['unset', 'true', 'false'], description: 'enable input from and output to WebM container')
option('libyuv', type: 'combo', choices: ['unset', 'true', 'false'], description: 'enable libyuv')
option('vp8_encoder', type: 'combo', choices: ['unset', 'true', 'false'], description: 'Enable the VP8 encoder only')
option('vp8_decoder', type: 'combo', choices: ['unset', 'true', 'false'], description: 'Enable the VP8 decoder only')
option('vp9_encoder', type: 'combo', choices: ['unset', 'true', 'false'], description: 'Enable the VP9 encoder only')
option('vp9_decoder', type: 'combo', choices: ['unset', 'true', 'false'], description: 'Enable the VP9 decoder only')
#### --- END GENERATED EXTERN OPTIONS --- ####
