# SPDX-FileCopyrightText: 2023 L. E. Segovia <amy@amyspark.me>
# SPDX-License-Identifier: BSD-3-Clause

option('enable_features', type: 'array', description: 'Enable  these (possibly undocumented) configuration entries')
option('disable_features', type: 'array', description: 'Disable these (possibly undocumented) configuration entries')
option('force_enable_features', type: 'array', description: 'Forcibly set these (possibly undocumented) configuration entries as enabled')
option('force_disable_features', type: 'array', description: 'Forcibly set these (possibly undocumented) configuration entries as disabled')
#### --- GENERATED EXTERN OPTIONS --- ####
option('cpu', type: 'string', description: 'tune for the specified CPU (ARM: cortex-a8, X86: sse3)')
option('gprof', type: 'feature', description: 'enable/disable gprof profiling instrumentation')
option('thumb', type: 'feature', description: 'enable/disable building arm assembly in thumb mode')
option('install_docs', type: 'feature', description: 'control whether docs are installed')
option('install_bins', type: 'feature', value: 'enabled', description: 'control whether binaries are installed')
option('install_libs', type: 'feature', value: 'enabled', description: 'control whether libraries are installed')
option('libs', type: 'feature', value: 'enabled', description: 'libraries')
option('examples', type: 'feature', value: 'enabled', description: 'examples')
option('tools', type: 'feature', value: 'enabled', description: 'tools')
option('docs', type: 'feature', value: 'enabled', description: 'documentation')
#### MANUAL
option('unit_tests', type: 'feature', value: 'disabled', description: 'unit tests')
option('decode_perf_tests', type: 'feature', description: 'build decoder perf tests with unit tests')
option('encode_perf_tests', type: 'feature', description: 'build encoder perf tests with unit tests')
option('size_limit', type: 'string', description: 'max size to allow in the decoder')
option('codec_srcs', type: 'feature', description: 'in/exclude codec library source code')
option('vp9_highbitdepth', type: 'feature', description: 'use VP9 high bit depth (10/12) profiles')
option('better_hw_compatibility', type: 'feature', description: 'enable encoder to produce streams with better hardware decoder compatibility')
option('vp8', type: 'feature', description: 'Enable the VP8 codec')
option('vp9', type: 'feature', description: 'Enable the VP9 codec')
option('internal_stats', type: 'feature', description: 'output of encoder internal stats for debug, if supported (encoders)')
option('postproc', type: 'feature', description: 'postprocessing')
option('vp9_postproc', type: 'feature', description: 'vp9 specific postprocessing')
option('multithread', type: 'feature', value: 'enabled', description: 'multithreaded encoding and decoding')
option('spatial_resampling', type: 'feature', value: 'enabled', description: 'spatial sampling (scaling) support')
option('realtime_only', type: 'feature', description: 'enable this option while building for real-time encoding')
option('onthefly_bitpacking', type: 'feature', description: 'enable on-the-fly bitpacking in real-time encoding')
option('error_concealment', type: 'feature', description: 'enable this option to get a decoder which is able to conceal losses')
option('coefficient_range_checking', type: 'feature', description: 'enable decoder to check if intermediate transform coefficients are in valid range')
option('runtime_cpu_detect', type: 'feature', description: 'runtime cpu detection')
option('postproc_visualizer', type: 'feature', description: 'macro block / block level visualizers')
option('multi_res_encoding', type: 'feature', description: 'enable multiple-resolution encoding')
option('temporal_denoising', type: 'feature', value: 'enabled', description: 'enable temporal denoising and disable the spatial denoiser')
option('vp9_temporal_denoising', type: 'feature', description: 'enable vp9 temporal denoising')
option('webm_io', type: 'feature', description: 'enable input from and output to WebM container')
option('libyuv', type: 'feature', description: 'enable libyuv')
option('vp8_encoder', type: 'feature', description: 'Enable the VP8 encoder only')
option('vp8_decoder', type: 'feature', description: 'Enable the VP8 decoder only')
option('vp9_encoder', type: 'feature', description: 'Enable the VP9 encoder only')
option('vp9_decoder', type: 'feature', description: 'Enable the VP9 decoder only')
#### --- END GENERATED EXTERN OPTIONS --- ####
